tests/NormalTests/paczka1/fuzzy1/81118992.err
Error in line 1: GHiemE S949 66,2
Error in line 3: GHiemE S472 31,0
Error in line 28: 3V02vEbKewg S472 90,6
Error in line 30: 3V02vEbKewg S949 35,0
Error in line 32: 5HKU9Oh S472 92,2
Error in line 38: s9U S615 61,0
